# rkyv_codec

./: .gitignore  Cargo.toml  README.md  flake.nix  plot_benchmarks.py  rust-toolchain.toml  rustfmt.toml
benches/: codec_comparison.rs
examples/: chat_client.rs  chat_server.rs
examples/no-std/: Cargo.toml
examples/no-std/src/: main.rs
src/: aio.rs  framed_codec.rs  futures_stream.rs  length_codec.rs  lib.rs  rkyv_codec.rs
