[package]
name = "rkyv_codec"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Some adaptors to stream rkyv Archives over AsyncRead and AsyncWrite"
repository = "https://github.com/zyansheep/rkyv_codec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv = { version = "0.8" }
futures = "0.3"
pin-project = "1.1"
unsigned-varint = { version = "0.8", features = ["futures"] }
asynchronous-codec = { version = "0.7", optional = true }
bytes = { version = "1.10" }
thiserror = "2.0"

[dev-dependencies]
# CBOR for comparison benchmarks
asynchronous-codec = { version = "0.7", features = ["cbor"] }
# Runtime
async-std = { version = "1.13.0", features = ["attributes"] }
# For tests & benchmark comparisons
serde = "^1.0"
lazy_static = "1.5.0"
# For examples
async-broadcast = "0.7.1"
rustyline-async = "0.4.0"
anyhow = "1.0"

[features]
default = ["futures_stream", "std"]
std = []
futures_stream = ["asynchronous-codec"]

[workspace]
members = ["examples/no-std"]

[workspace.metadata.nix]
systems = ["x86_64-linux"]

[package.metadata.nix]
app = true
build = true
