[package]
name = "rkyv_codec"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Some adaptors to stream rkyv Archives over AsyncRead and AsyncWrite"
repository = "https://github.com/zyansheep/rkyv_codec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv = { version = "0.8", default-features = false, features = [
	"bytecheck",
	"alloc",
] }
pin-project = "1.1"
unsigned-varint = { version = "0.8", optional = true }
futures = { version = "0.3", optional = true }
asynchronous-codec = { version = "0.7", optional = true }
bytes = { version = "1.10" }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }

[dev-dependencies]
# Runtime
async-std = { version = "1.13.0", features = ["attributes"] }
# For tests & benchmark comparisons
asynchronous-codec = { version = "0.7", features = ["cbor"] }
serde = "^1.0"
lazy_static = "1.5.0"
# For examples
async-broadcast = "0.7.1"
rustyline-async = "0.4.0"
anyhow = "1.0"
paste = "1.0"

[features]
default = ["futures_stream", "std", "varint"]
varint = ["unsigned-varint"]
std = ["thiserror/std", "rkyv/std", "futures"]
futures_stream = ["asynchronous-codec"]

[workspace]
members = ["examples/no-std"]

[[example]]
name = "chat_server"
required-features = ["std", "varint"]

[[example]]
name = "chat_client"
required-features = ["std", "varint"]

[package.metadata."docs.rs"]
all-features = true
